# syswatcher

./: Cargo.toml  Makefile.toml
api/: Cargo.toml
api/src/: app.rs  lib.rs  system.rs  widget.rs
api/src/system/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  prelude.rs  process.rs  swap.rs
shared/: Cargo.toml
shared/src/: error.rs  util.rs
src/: main.rs
